--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
-
 server.port=5054
 
 spring.application.name=PROJECT-MANAGEMENT
 
 spring.datasource.url=jdbc:mysql://localhost:3306/projectmanagement
 spring.datasource.username=root
-spring.datasource.password=$7090Ashok
+spring.datasource.password=Dkj@12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
-#email
+# Email configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=akshayhiremath744@gmail.com
-spring.mail.password=licd ygvc curk timg
+spring.mail.username=deepali784521@gmail.com
+spring.mail.password=fqph jtum wwdl ocyn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-razorpay.api.key=rzp_test_5NYr5rWRBwIjeJ
-razorpay.api.secret=iwY4bd3C4bkK8Ft42ZAHJZ80
+# Razorpay configuration
+razorpay.api.key=rzp_test_jTy78tdSD1Hyhd
+razorpay.api.secret=mDwYOpUp8R7RdALGoB3UmwYB
